--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="Rock.js"></script>
   <script src="Bullet.js"></script>
   <script src="SpaceShip.js"></script>
+  <script src="defenceWall.js"></script>
 
   <script src="update.js"></script>
   <script src="render.js"></script>
