--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+
   <div class= "mainContainer">
     <canvas id="myCanvas" width="600" height="600"
       style="border: 1px solid white;">
       Sorry, but your browser does not support the HTML5 canvas tag.
     </canvas>
   </div>
+<div id="starfield"></div>
+
   <div id="output"></div>
+
+  <script src="starfield.js"></script>
   <script src="globals.js"></script>
   <script src="consts.js"></script>
   <script src="util.js"></script>
@@ -27,12 +32,8 @@
   <script src="Rock.js"></script>
   <script src="Bullet.js"></script>
   <script src="SpaceShip.js"></script>
-<<<<<<< Updated upstream
   <script src="EnemyShip.js"></script>
-=======
   <script src="defenceWall.js"></script>
->>>>>>> Stashed changes
-
   <script src="update.js"></script>
   <script src="render.js"></script>
 
