Freeze game in victory + smá lagfæringar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Sorry, but your browser does not support the HTML5 canvas tag.
     </canvas>
     <div class="instructions">
-      <h1>SPACE INVADER</h1>
+      <h1>SPACE INVADERS</h1>
       <h2>Destroy those <br/> aliens before they destroy your city!</h2>
       <p>SHOOT WITH SPACE BAR</p>
       <p>MOVE WITH A & D</p>
