Update text in instructions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p>SHOOT WITH SPACE BAR</p>
       <p>MOVE WITH A & D</p>
       <p>PAUSE WITH P</p>
-      <p>+ more secret functions!</p>
+      <p>Get power-ups + extra points by shooting down the enemy ships</p>
     </div>
   </div>
 
