Updating text/information in index

--- a/index.html
+++ b/index.html
@@ -20,9 +20,31 @@
       <p>MOVE WITH A & D</p>
       <p>PAUSE WITH P</p>
       <p>Get power-ups + extra points by shooting down the enemy ships</p>
+      <br><br>
+      <br><br>
+
+      <div class="bottomContainer">
+        <div class = "authors">
+          <p>Created by:</p>
+          <p>
+            Diljá<br>
+            Pétur<br>
+            Ragnar<br>
+            Sandra<br>
+          </p>
+        </div>
+        <div class = "imageSource">
+          <p>Free images from:</p>
+            <a href="http://moziru.com/explore/Spaceship%20clipart%20yellow/#gal_post_3971_spaceship-clipart-yellow-19.png">Spaceship</a><br>
+            <a href="https://pixabay.com/en/ufo-alien-space-comic-object-1932941/">EnemyShip1</a><br>
+            <a href="http://clipartbarn.com/ufo-clipart_6304/">EnemyShip2</a><br>
+            <a href="http://clipart-library.com/clipart/8TA6E7K9c.htm">EnemyShip3</a><br>
+            <p>Aliens made by Ragnar</p>
+        </div>
+      </div>
+
     </div>
   </div>
-
 
 
   <div id="output"></div>
