Updating text/information in index -part 2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </p>
         </div>
         <div class = "imageSource">
-          <p>Free images from:</p>
+          <p>Image sources:</p>
             <a href="http://moziru.com/explore/Spaceship%20clipart%20yellow/#gal_post_3971_spaceship-clipart-yellow-19.png">Spaceship</a><br>
             <a href="https://pixabay.com/en/ufo-alien-space-comic-object-1932941/">EnemyShip1</a><br>
             <a href="http://clipartbarn.com/ufo-clipart_6304/">EnemyShip2</a><br>
